# CS4099Real

libtorch_build_arm/: Dockerfile
libtorch_docker/: Cargo.toml  Dockerfile  execute.sh
libtorch_docker/script/: tch-rs-native
libtorch_docker/src/: main.rs
libtorch_docker_experiment/: Cargo.toml  Dockerfile  prepare.sh  wasi-aot.wasm  wasi-native  wasi-wasm.wasm  wasmedge-wasinn-example-mobilenet-image
libtorch_docker_experiment/.cargo/: config.toml
libtorch_docker_experiment/src/: main.rs
pytorch_docker/: script.py
rust_experiment/: Cargo.toml  simple_test
rust_experiment/src/: main.rs
